# brawlstar_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  env.example  hello.py  pyproject.toml
config/: config.local.yaml  config.yaml
data/sample/: README.md  dim_clubs.parquet  dim_game_modes.parquet  dim_maps.parquet  dim_players.parquet  fact_matches.parquet
data/sample/dim_clubs/2025-07-14/: dim_clubs.parquet
data/sample/dim_game_modes/2025-07-14/: dim_game_modes.parquet
data/sample/dim_maps/2025-07-14/: dim_maps.parquet
data/sample/dim_players/2025-07-14/: dim_players.parquet
data/sample/fact_matches/2025-07-14/: fact_matches.parquet
notebooks/: 01_silver_data_exploration.ipynb  02_gold_data_exploration.ipynb  03_model_exploration.ipynb
src/: requests_bs.py
src/brawlstar_project/analytics/: club_queries.py  duckdb_queries.py  duckdb_utils.py  global_queries.py  player_queries.py
src/brawlstar_project/constants/: paths.py
src/brawlstar_project/entities/: __init__.py  tag_entity.py
src/brawlstar_project/entities/club/: __init__.py  club.py
src/brawlstar_project/entities/player/: player.py
src/brawlstar_project/player/: battlelog_models.py  player.py  player_models.py
src/brawlstar_project/processing/: models.py  player.py  unified_main.py  utils.py
streamlit_app/: main.py
tests/: test_club.py  test_generic_utils.py  test_player.py  test_pydantic_models.py  test_runner.py
tests/models/: test_battlelog_models.py  test_club_models.py  test_members_models.py  test_player_models.py
(+38 files in other folders)
