[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brawlstar_project"
version = "0.1.0"
description = "Brawl Stars data analysis project using Polars and Iceberg"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0",
    "pre-commit>=4.2.0",
    "pyiceberg>=0.9.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.3",
]

[project.scripts]
brawlstars = "brawlstar_project.processing.raw.main:main"

[tool.hatch.build.targets.wheel]
packages = ["brawlstar_project"]

[tool.hatch.build]
source-directory = "src"
